set project image max height to fix safari stretched image.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
   height: 3.5rem;
 }
 
+.project-image {
+  max-height: 300px;
+}
+
 a.nav-link.active  {
   color: white;
 }
